Fixed header spacing

--- a/public/a/c/_images-loaded.scss
+++ b/public/a/c/_images-loaded.scss
@@ -37,10 +37,11 @@
 	margin-left: -2px;
 	margin-top: -2px;
 	display: block;
-/*
-	.animation(fadeTwitch 100ms linear infinite);
+	//.animation(fadeTwitch 100ms linear infinite);
+	-webkit-animation:fadeTwitch 100ms linear infinite;
+	-moz-animation: fadeTwitch 100ms linear infinite;
+	animation: fadeTwitch 100ms linear infinite;
 	-webkit-filter: blur(1px);
-*/
 }
 
 @-webkit-keyframes fadeTwitch {
