--- a/public/a/c/screen.css
+++ b/public/a/c/screen.css
@@ -1166,12 +1166,16 @@ header {
       .work-landing header, .work-detail header {
         margin-bottom: 20px; } }
   header .inner-wrap {
-    padding-top: 42px;
+    padding-top: 33px;
     background: #fff;
     margin-bottom: 19px; }
   @media (max-width: 768px) {
     header {
-      margin-bottom: 20px; } }
+      margin-bottom: 20px;
+      display: none;
+      position: fixed;
+      width: 100%;
+      z-index: 999; } }
 
 @media (max-width: 768px) {
   header .wrap {
@@ -1207,7 +1211,7 @@ header {
   margin-top: 45px; }
 
 .search-wrap.work, .search-wrap.detail {
-  margin-top: 170px; }
+  margin-top: 165px; }
   .search-wrap.work .image-loading:last-child img, .search-wrap.detail .image-loading:last-child img {
     margin-bottom: 0; }
 
@@ -1253,12 +1257,6 @@ header {
     padding-left: 30px; }
 
 @media (max-width: 768px) {
-  header {
-    display: none;
-    position: fixed;
-    width: 100%;
-    z-index: 999; }
-
   .hover-trigger {
     display: block; } }
 .logo {
@@ -3174,10 +3172,10 @@ label.error {
   margin-left: -2px;
   margin-top: -2px;
   display: block;
-  /*
-  	.animation(fadeTwitch 100ms linear infinite);
-  	-webkit-filter: blur(1px);
-  */ }
+  -webkit-animation: fadeTwitch 100ms linear infinite;
+  -moz-animation: fadeTwitch 100ms linear infinite;
+  animation: fadeTwitch 100ms linear infinite;
+  -webkit-filter: blur(1px); }
 
 @-webkit-keyframes fadeTwitch {
   0% {
